--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,13 @@ body {
 .App {
   text-align: center;
   padding: 2rem;
+
+}
+
+.App-header.h1 {
+  color: #ffffff;
+  font-size: 2.5rem;
+  margin-bottom: 2rem; /* Add bottom margin */
 }
 
 .App-header {
@@ -18,6 +25,7 @@ body {
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  margin-bottom: 0%;
 }
 
 form {
@@ -65,4 +73,8 @@ button:hover {
 .resultado ul {
   list-style-type: disc;
   padding-left: 1.5rem;
+}
+
+.motor-selection label {
+  margin-bottom: 10px; /* Add margin-bottom to the label */
 }
