--- a/frontend/src/components/Formulario.css
+++ b/frontend/src/components/Formulario.css
@@ -3,7 +3,7 @@
   --bg-color: #1e1e1e;
   --text-color: #ffffff;
   --accent-color: #ff6f00; /* Naranja vibrante */
-  --secondary-color: #2b2b2b;
+  --secondary-color: #131313;
   --hover-color: #ff8c42;
   --border-radius: 8px;
   --transition-speed: 0.3s;
@@ -29,7 +29,7 @@ body {
   padding: 20px;
   background: var(--secondary-color);
   border-radius: var(--border-radius);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 10px rgb(0, 0, 0);
   animation: fadeIn 0.8s ease-in-out;
 }
 
@@ -47,6 +47,7 @@ body {
 
 /* Estructura del formulario */
 .calculation-form {
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -275,4 +276,8 @@ ul {
 .conductor-card ul {
   list-style: none;
   padding-left: 0;
+}
+
+.motor-selection label {
+  margin-bottom: 10px; /* Add margin-bottom to the label */
 }
